tests/neg/firstError.scala
. // error: expected class or object definition